# CryptoBot

./: .gitignore  LICENSE
crypto-trading/: .Cargo.toml.swp  Cargo.toml
crypto-trading/keys/: file_wrong_format.json  test_false_keys_file.json
crypto-trading/src/: .vimrc  binance.rs  coin.rs  log.rs  main.rs  wallet.rs
crypto-trading/test/: binance_test.rs
